# src/main/java/td/agricoles/agricol/dto/response/Collectivity.java
@@ -3,13 +3,14 @@ package td.agricoles.agricol.dto.response;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import td.agricoles.agricol.dto.CollectivityInformation;
 
 import java.util.List;
 
 @Data
 @NoArgsConstructor
 @AllArgsConstructor
-public class Collectivity {
+public class Collectivity extends CollectivityInformation {
     private String id;
     private String location;
     private CollectivityStructure structure;
